crates/psqs/src/queue/snapshots/psqs__queue__pbs__tests__dftb_pbs.snap
---
source: crates/psqs/src/queue/pbs.rs
expression: got
---
#!/bin/sh
#PBS -S /bin/bash
#PBS -j oe
#PBS -W umask=022
#PBS -l walltime=1000:00:00
#PBS -l ncpus=1
#PBS -l mem=8gb
#PBS -q workq
#PBS -V

module load openpbs

export WORKDIR=$PBS_O_WORKDIR
cd $WORKDIR

export DFTB_CMD=${DFTB_CMD:-dftb+}
(cd pts/opt0 && $DFTB_CMD > out)
(cd pts/opt1 && $DFTB_CMD > out)
(cd pts/opt2 && $DFTB_CMD > out)
(cd pts/opt3 && $DFTB_CMD > out)
