crates/psqs/src/queue/snapshots/psqs__queue__pbs__tests__mopac_pbs.snap
---
source: crates/psqs/src/queue/pbs.rs
expression: got
---
#!/bin/sh
#PBS -S /bin/bash
#PBS -j oe
#PBS -W umask=022
#PBS -l walltime=1000:00:00
#PBS -l ncpus=1
#PBS -l mem=1gb
#PBS -q workq
#PBS -V

module load openpbs

export WORKDIR=$PBS_O_WORKDIR
cd $WORKDIR

export MOPAC_CMD=${MOPAC_CMD:-mopac}
$MOPAC_CMD pts/opt0.mop
$MOPAC_CMD pts/opt1.mop
$MOPAC_CMD pts/opt2.mop
$MOPAC_CMD pts/opt3.mop
